--- a/ms-product/src/main/resources/application.properties
+++ b/ms-product/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+logging.level.org.springfrawework.web=TRACE
 spring.application.name=ms-product
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
