Modify properties file
 - Add changes to logging level for web to INFO.

--- a/ms-product/src/main/resources/application.properties
+++ b/ms-product/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.springfrawework.web=TRACE
+logging.level.org.springfrawework.web=INFO
 spring.application.name=ms-product
 
 spring.jpa.show-sql=true
