ECOM-6 ECOM | Create Product entity/model
 - Add BaseEntity, Category and ProductEntityTest.
 - Modify ProductMapper to map correct source and target.
 - Modify application properties file for typo fix.

--- a/ms-product/src/main/resources/application.properties
+++ b/ms-product/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.springfrawework.web=INFO
+logging.level.org.springframework.web=INFO
 spring.application.name=ms-product
 
 spring.jpa.show-sql=true
