ECOM-9 ECOM | Create register Product API. Closes #4.
 - Modify port to 8100.
 - Implement POST API to create product.
 - Fix issues with entity id and dto, service, controller id data type.
 - Fix mapping dates from UTC to local date formats.

--- a/ms-product/src/main/resources/application.properties
+++ b/ms-product/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 logging.level.org.springframework.web=INFO
+#logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+server.port=8100
 spring.application.name=ms-product
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
