--- a/ms-product/src/main/resources/application.properties
+++ b/ms-product/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-logging.level.org.springframework.web=INFO
-#logging.level.org.hibernate.orm.jdbc.bind=TRACE
+logging.level.org.springframework.web=TRACE
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
 server.port=8100
 spring.application.name=ms-product
