--- a/ms-product/src/main/resources/application.properties
+++ b/ms-product/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 logging.level.org.springframework.web=INFO
-#logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
 server.port=8100
 spring.application.name=ms-product
 
+spring.datasource.url=jdbc:mysql://localhost:3306
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.profiles.active=test
+
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=true
