--- a/ms-product/pom.xml
+++ b/ms-product/pom.xml
@@ -97,9 +97,7 @@
             </path>
           </annotationProcessorPaths>
           <compilerArgs>
-            <compilerArg>
-              -Amapstruct.defaultComponentModel=spring
-            </compilerArg>
+            <arg>-Amapstruct.defaultComponentModel=spring</arg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -127,7 +125,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
+          <argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
         </configuration>
       </plugin>
     </plugins>
