ECOM-18 ECOM | Create PUT API for replacing existing category
 - Add profiles for different databases.
 - Add changes to README.md for guiding project setup and running steps.
 - Add fix for Product APIs.
 - Add fixes for ECOM-21
 - Add more loggers to businees logic.
 - Improve DB entities and indexes.

--- a/ms-product/src/main/resources/application-test.properties
+++ b/ms-product/src/main/resources/application-test.properties
@@ -1,5 +1,6 @@
 logging.level.org.springframework.web=TRACE
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
+logging.level.dev.sunny.msproduct=DEBUG
 
 server.port=8100
 spring.application.name=ms-product
