--- a/ms-product/src/main/resources/application.properties
+++ b/ms-product/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 
-spring.profiles.active=test
+#spring.profiles.active=oracle
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
