--- a/ms-product/src/main/resources/application-test.properties
+++ b/ms-product/src/main/resources/application-test.properties
@@ -9,7 +9,10 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.h2.console.path=/product-db/h2-console
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
+spring.jackson.deserialization.fail-on-null-for-primitives=false
