--- a/ms-product/src/main/resources/application.properties
+++ b/ms-product/src/main/resources/application.properties
@@ -1,13 +1,16 @@
-logging.level.org.springframework.web=INFO
+logging.level.org.springframework.web=${LOG_LEVEL:TRACE}
 
-server.port=8100
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
+server.port=${SERVER_PORT:8100}
 spring.application.name=ms-product
 
-spring.datasource.url=jdbc:mysql://localhost:3306
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${DB_URL:localhost}:3306/productdb
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASSWORD:root}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #spring.profiles.active=oracle
 
